--- a/config.ini
+++ b/config.ini
@@ -74,17 +74,17 @@ custom_proxy_group=📢 谷歌FCM`select`[]🚀 GFWList`[]🇺🇲 美国节点`
 custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 GFWList`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🚀 GFWList`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=📢 谷歌`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=📢 Github`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 Disney+`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 Hulu`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 Hulu-Japan`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 HBO`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 HBO-GO-HK`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 Peacock`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 Paramount+`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🎥 亚马逊视频`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🎥 奈飞节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 Disney+`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 Hulu`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 Hulu-Japan`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 HBO`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 HBO-GO-HK`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 Peacock`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 Paramount+`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🎥 亚马逊视频`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 GFWList`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3
 custom_proxy_group=🎶 Spotify`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
@@ -104,7 +104,6 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换1`[]🚀
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 GFWList`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3
-;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
 enable_rule_generator=true
