--- a/config.ini
+++ b/config.ini
@@ -44,8 +44,8 @@ ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/sildem/ACL4SSR/maste
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/Bahamut.list
-ruleset=📺 哔哩哔哩港,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=📺 哔哩哔哩港,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 GFWList,https://raw.githubusercontent.com/sildem/ACL4SSR/master/Clash/ProxyGFWlist.list
