--- a/config.ini
+++ b/config.ini
@@ -59,7 +59,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🚀 手动切换1`url-test`.*`http://www.gstatic.com/generate_204`300,,50`(港|HK|Hong Kong|hk)
+custom_proxy_group=🚀 手动切换1`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换2`select`.*
 custom_proxy_group=🚀 手动切换3`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong|hk)
