--- a/config.ini
+++ b/config.ini
@@ -97,7 +97,7 @@ custom_proxy_group=🎮 XBOX游戏`select`[]🚀 GFWList`[]♻️ 自动选择`[
 custom_proxy_group=🎮 EPIC游戏`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=🎮 SONY游戏`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=🎮 Steam游戏`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
-custom_proxy_group=🚀 GFWList`select`[]🚀 GFWList`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
+custom_proxy_group=🚀 GFWList`select`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换1`[]🚀 手动切换2`[]🚀 手动切换3`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
